# julong

./: .env.example  .gitignore  build-apk-direct.ps1  build-apk.bat  build-apk.ps1  build-apk2.ps1  build-apk3.ps1  build-cargo.ps1  build-tauri.bat  build-tauri.ps1  capacitor.config.ts  eslint.config.js  index.html  package-lock.json  package.json  run-apk-build.bat  run-cargo-build.bat  run-gradle.ps1  tailwind.config.js  test-gradle.ps1  vite.config.ts
android/: capacitor.settings.gradle  gradle.properties
android/app/: build.gradle  capacitor.build.gradle  proguard-rules.pro  release-key.jks
frontend/: pubspec.yaml
frontend/android/: settings.gradle
frontend/lib/: main.dart
public/: 404.html  splash.html
public/.well-known/: assetlinks.json
scripts/: build-portable-exe.ps1  pack-portable-exe.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AboutDialog.tsx  ErrorBoundary.tsx  Icon.tsx  LaunchScreen.tsx  Layout.tsx  LongPressMenu.tsx  RecognizerPanel.tsx  TitleBar.tsx  Toast.tsx  toast-context.ts
src/config/: defaults.ts  expenseRules.ts
src/hooks/: useKeyboardShortcuts.ts  useLocalStorage.ts  useLongPressMenu.tsx  usePullToRefresh.ts  useRecognizer.ts
src/lib/: debug.ts  supabase.ts  sync-merge.ts  sync.ts  tauri-files.ts  theme.ts  utils.ts
src/pages/: Batch.tsx  Expenses.tsx  Generator.tsx  Home.tsx  Logistics.tsx  LogisticsExceptions.tsx  LogisticsStats.tsx  (+7 more)
(+16 files in other folders)
